# megamol-shader-factory

./: .gitignore  CMakeExternals.cmake  CMakeLists.txt  LICENSE  LICENSE_GLSLANG  README.md
cmake/: fetch_glslang.cmake  libs.cmake  msfConfig.cmake.in  shaderc_utils.cmake
cmake/glslang_workaround/: ResourceLimits.h
cmake/shaderc/: deps.cmake
glad/: CMakeLists.txt
include/msf/: LineTranslator.h  ShaderFactory.h  ShaderFactoryOptions.h  ShaderFactoryOptionsOpenGL.h  ShaderFactoryUtils.h  compiler.h  compiler_options.h  compiler_utils.h  includer.h  includer_dispatch.h  utils.h
src/: Includer.cpp  Includer.h  LineTranslator.cpp  ShaderFactory.cpp  ShaderFactoryOptions.cpp  ShaderFactoryOptionsOpenGL.cpp  Utils.h  compiler.cpp  compiler.h  compiler_options.cpp  compiler_options.h  includer.cpp  includer.h  includer_dispatch.cpp  includer_dispatch.h  shaderfactory.cpp  shaderfactory.h
src/gl/: README.md  msf_opengl_loader.h
test/: common.glsl  main.cpp  test.vert.glsl
